--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,10 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
+  sqs:
+    image: softwaremill/elasticmq
+    restart: always
+    ports:
+      - 9324:9324
 volumes:
   mysql-data:
