--- a/my-laravel-app/composer.json
+++ b/my-laravel-app/composer.json
@@ -57,6 +57,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "phpcs": [
+            "./vendor/bin/phpcs --colors --standard=phpcs.xml ./ || exit 0"
         ]
     }
 }
