--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     - mysql
     volumes:
       - .:/var/www/html
+    container_name: myapp
+    user: www-data
   mysql:
     image: mysql:5.7
     environment:
